@@ -3,10 +3,11 @@ package io.github.xienaoban.biologydictionary.net;
 import io.github.xienaoban.biologydictionary.common.net.Packet;
 import io.github.xienaoban.biologydictionary.net.payload.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 public final class PacketPayloads {
-    public static final List<Class<? extends Packet>> LIST = List.of(
+    public static final List<Class<? extends Packet>> LIST = Arrays.asList(
             RequestBeehiveInfoPacket.class,
             RequestEntityDataPacket.class,
             RequestHandbookItemPacket.class,
